- clone viewer
- add viewer with specific detectors
- move timewindow to general generator tab - make all other the same
- bring output structure out of gemc
- bring options out of gemc
- bring graph out of gemc
- bring splash screen out of gemc
- "ahit" general function to get infos (with auto, c++11) getVector(string), get3Vector(string)
- remove obsolete cpp materials

8/6/15
- overloaded get_info with extra argument: fixed bug that affected particles that 
  contain parenthesis in the name. Volker found this one after 5 minutes of playing with the code!

7/28/15
- fixed number of material entries for devel (rayleigh makes it 18 not 17)
- fixed typo on materials api

7/24/15
- added rayleigh property in materials api and material factory

7/15/15
- fixed processName routine, sometimes the trk->GetCreatorProcess() is null
- added warning suppressor for compiling on Mac
- added gemc version on the log

6/10/15
- fixed mysql material query, it was not getting the optical info

6/4/15
- added process name and material name in the Hit class
- saving process and material names in the Hit class from SensitiveDetector.cc

6/2/15
- fix: setting run number at each event instead of only with message log

5/28/15
- added unsmeared and smeard tdc for clas12 ftof

5/26/15
- improved log for LUND format
- added runWeights class. This class reads a text file with two columns: run and weight
  The class contain a map<int, int> which contains the number of events for each run number.
  The number of events is randomized based on the number of events desired by the user and the weight table.
- improved ftof digitization routines

5/20/15
- added active fields in the option map so they are written in the output (as simulation conditions)

5/15/15
- setting hadronic physics list to "none" by default. User can enable them in the gcard or
  command line. This way one can choose to run w/o hadronic physics.

5/13/15
- Daria's' changes to cnd hit process routine